--- a/ModernGL.vcxproj
+++ b/ModernGL.vcxproj
@@ -140,6 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DgBoolean.cpp" />
     <ClCompile Include="DgViewer.cpp" />
     <ClCompile Include="DgMesh.cpp" />
     <ClCompile Include="DgVolume.cpp" />
@@ -154,8 +155,12 @@
     <ClCompile Include="implot.cpp" />
     <ClCompile Include="implot_items.cpp" />
     <ClCompile Include="DgScene.cpp" />
+    <ClCompile Include="WindowProperty.cpp" />
+    <ClCompile Include="WindowSceneLayer.cpp" />
+    <ClCompile Include="WindowToolbar.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DgBoolean.h" />
     <ClInclude Include="DgMesh.h" />
     <ClInclude Include="DgViewer.h" />
     <ClInclude Include="DgVolume.h" />
