--- a/ModernGL.vcxproj
+++ b/ModernGL.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -155,6 +155,7 @@
     <ClCompile Include="implot.cpp" />
     <ClCompile Include="implot_items.cpp" />
     <ClCompile Include="DgScene.cpp" />
+    <ClCompile Include="SdfUtils.cpp" />
     <ClCompile Include="WindowProperty.cpp" />
     <ClCompile Include="WindowSceneLayer.cpp" />
     <ClCompile Include="WindowToolbar.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="DgVolume.h" />
     <ClInclude Include="ImGuiManager.h" />
     <ClInclude Include="DgScene.h" />
+    <ClInclude Include="SdfUtils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
