--- a/ModernGL.vcxproj.filters
+++ b/ModernGL.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClInclude Include="DgBoolean.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="DgSDF.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
