--- a/ModernGL.vcxproj
+++ b/ModernGL.vcxproj
@@ -141,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DgBoolean.cpp" />
+    <ClCompile Include="DgBvh.cpp" />
     <ClCompile Include="DgViewer.cpp" />
     <ClCompile Include="DgMesh.cpp" />
     <ClCompile Include="DgVolume.cpp" />
@@ -161,8 +162,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DgBoolean.h" />
+    <ClInclude Include="DgBvh.h" />
     <ClInclude Include="DgMesh.h" />
-    <ClInclude Include="DgSDF.h" />
     <ClInclude Include="DgViewer.h" />
     <ClInclude Include="DgVolume.h" />
     <ClInclude Include="ImGuiManager.h" />
