--- a/ModernGL.vcxproj.filters
+++ b/ModernGL.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="WindowProperty.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="DgBvh.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DgMesh.h">
@@ -92,7 +95,7 @@
     <ClInclude Include="DgBoolean.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="DgSDF.h">
+    <ClInclude Include="DgBvh.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
