--- a/ModernGL.vcxproj
+++ b/ModernGL.vcxproj
@@ -113,11 +113,13 @@
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <AdditionalIncludeDirectories>C:\dev\VTK-install\include\vtk-9.5;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>.\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>.\lib;C:\dev\VTK-install\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>vtkCommonCore-9.5.lib;vtkCommonDataModel-9.5.lib;vtkIOXML-9.5.lib;vtksys-9.5.lib;vtkexpat-9.5.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -130,13 +132,15 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <AdditionalIncludeDirectories>C:\dev\VTK-install\include\vtk-9.5;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>.\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>.\lib;C:\dev\VTK-install\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>vtkCommonCore-9.5.lib;vtkCommonDataModel-9.5.lib;vtkIOXML-9.5.lib;vtksys-9.5.lib;vtkexpat-9.5.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
