--- a/ModernGL.vcxproj.filters
+++ b/ModernGL.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="WindowProperty.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="DgSweep.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DgMesh.h">
@@ -90,6 +93,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="DgBoolean.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="DgSweep.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
