--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,26
-Size=1280,998
+Size=1907,847
 Collapsed=0
 
 [Window][Debug##Default]
@@ -16,34 +16,34 @@ DockId=0x00000005,0
 
 [Window][SceneGL]
 Pos=208,79
-Size=802,945
+Size=1429,794
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ToolBar]
 Pos=0,26
-Size=1280,52
+Size=1907,52
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][SceneLayer]
 Pos=0,79
-Size=207,945
+Size=207,794
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Property]
-Pos=1011,79
-Size=269,945
+Pos=1638,79
+Size=269,794
 Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=34,74 Size=1280,998 Split=Y Selected=0x9DCCF742
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=327,101 Size=1907,847 Split=Y Selected=0x9DCCF742
   DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,52 HiddenTabBar=1 Selected=0xBC3E6872
   DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,945 Split=X Selected=0x9DCCF742
     DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=207,945 Selected=0x92CB78CF
     DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=2352,945 Split=X Selected=0x9DCCF742
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=2082,945 CentralNode=1 HiddenTabBar=1 Selected=0x9DCCF742
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=2082,945 CentralNode=1 Selected=0x9DCCF742
       DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=269,945 Selected=0x1EA09189
 
