--- a/ModernGL.vcxproj
+++ b/ModernGL.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="DgBoolean.h" />
     <ClInclude Include="DgMesh.h" />
     <ClInclude Include="DgSweep.h" />
+    <ClInclude Include="DgTrajectory.h" />
     <ClInclude Include="DgViewer.h" />
     <ClInclude Include="DgVolume.h" />
     <ClInclude Include="ImGuiManager.h" />
